--- a/project/ISO5259/5259_text_qa.html
+++ b/project/ISO5259/5259_text_qa.html
@@ -10,6 +10,9 @@
     <title id="page-title">ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가 | Pebblous</title>
     <meta id="meta-description" name="description" content="ISO/IEC 5259 표준은 AI/ML 환경에 특화된 데이터 품질 평가의 새로운 패러다임을 제시합니다. 이 표준을 활용하여 LLM 텍스트 데이터의 품질을 평가하는 방법론과 실제 사례를 다룹니다.">
     <meta id="meta-keywords" name="keywords" content="ISO/IEC 5259, LLM, 데이터 품질, AI, ML, 텍스트 데이터, 데이터 거버넌스, Pebblous, 페블러스, 인공지능, 머신러닝">
+    <meta name="author" content="Pebblous">
+    <meta name="language" content="Korean">
+    <meta name="copyright" content="© 2024 Pebblous. All rights reserved.">
     <meta name="robots" content="index, follow">
 
     <link id="hreflang-ko" rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/report/iso-iec-5259-data-quality/ko/">
@@ -26,11 +29,45 @@
     <meta id="og-image-height" property="og:image:height" content="630">
     <meta property="og:type" content="website">
 
-    <meta id="twitter-url" property="twitter:url" content="https://blog.pebblous.ai/report/iso-iec-5259-data-quality/ko/">
-    <meta id="twitter-title" property="twitter:title" content="ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가 | Pebblous">
-    <meta id="twitter-description" property="twitter:description" content="ISO/IEC 5259 표준은 AI/ML 환경에 특화된 데이터 품질 평가의 새로운 패러다임을 제시합니다. 이 표준을 활용하여 LLM 텍스트 데이터의 품질을 평가하는 방법론과 실제 사례를 다룹니다.">
-    <meta id="twitter-image" property="twitter:image" content="https://blog.pebblous.ai/report/iso-iec-5259-data-quality/index.png">
-    <meta property="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@pebblous">
+    <meta name="twitter:creator" content="@pebblous">
+    <meta id="twitter-title" name="twitter:title" content="ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가 | Pebblous">
+    <meta id="twitter-description" name="twitter:description" content="ISO/IEC 5259 표준은 AI/ML 환경에 특화된 데이터 품질 평가의 새로운 패러다임을 제시합니다. 이 표준을 활용하여 LLM 텍스트 데이터의 품질을 평가하는 방법론과 실제 사례를 다룹니다.">
+    <meta id="twitter-image" name="twitter:image" content="https://blog.pebblous.ai/report/iso-iec-5259-data-quality/index.png">
+    <meta name="twitter:image:alt" content="ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가 가이드">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가",
+      "description": "ISO/IEC 5259 표준은 AI/ML 환경에 특화된 데이터 품질 평가의 새로운 패러다임을 제시합니다. 이 표준을 활용하여 LLM 텍스트 데이터의 품질을 평가하는 방법론과 실제 사례를 다룹니다.",
+      "image": "https://blog.pebblous.ai/report/iso-iec-5259-data-quality/index.png",
+      "author": {
+        "@type": "Organization",
+        "name": "Pebblous",
+        "url": "https://www.pebblous.ai"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Pebblous",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.pebblous.ai/favicon.svg"
+        }
+      },
+      "datePublished": "2024-01-01",
+      "dateModified": "2024-01-01",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://blog.pebblous.ai/report/iso-iec-5259-data-quality/ko/"
+      },
+      "inLanguage": "ko",
+      "keywords": "ISO/IEC 5259, LLM, 데이터 품질, AI, ML, 텍스트 데이터, 데이터 거버넌스"
+    }
+    </script>
 
     <!-- Styles and Scripts -->
     <meta charset="UTF-8">
@@ -158,6 +195,132 @@
                         </tbody>
                     </table>
                 </div>
+
+                <h3 class="themeable-heading">1.1. ISO/IEC 5259-2의 데이터 품질 측정 항목 (LLM 중립적)</h3>
+                <p>ISO/IEC 5259-2는 AI/ML 데이터 품질을 측정하기 위한 24개의 품질 특성(Data Quality Characteristics)을 정의합니다. 이러한 특성들은 데이터의 본질적 속성, 시스템 의존성, 추가 특성으로 구분되며, 모든 유형의 AI/ML 데이터(텍스트, 이미지, 테이블 등)에 적용 가능한 <strong>LLM 중립적인</strong> 평가 기준입니다.</p>
+
+                <div class="overflow-x-auto themeable-card rounded-lg border shadow-lg my-6">
+                    <table class="min-w-full text-sm">
+                        <thead class="border-b">
+                            <tr>
+                                <th class="p-3 font-bold themeable-heading text-left">상위 범주</th>
+                                <th class="p-3 font-bold themeable-heading text-left">품질 특성</th>
+                                <th class="p-3 font-bold themeable-heading text-left">설명</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Inherent Data Quality Characteristics (본질적 특성) -->
+                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                                <td class="p-3" rowspan="5"><strong>본질적 특성<br>(Inherent)</strong></td>
+                                <td class="p-3"><strong>Accuracy</strong> (정확성)</td>
+                                <td class="p-3">데이터 값이 실제 값을 올바르게 나타내는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Completeness</strong> (완전성)</td>
+                                <td class="p-3">필수 데이터가 누락 없이 존재하는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Consistency</strong> (일관성)</td>
+                                <td class="p-3">데이터 간 모순이 없고 일관된 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Credibility</strong> (신뢰성)</td>
+                                <td class="p-3">데이터가 신뢰할 수 있는 것으로 간주되는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Currentness</strong> (최신성)</td>
+                                <td class="p-3">데이터가 사용 목적에 맞는 적절한 시점의 것인 정도</td>
+                            </tr>
+
+                            <!-- Inherent & System-Dependent Characteristics (본질적 & 시스템 의존) -->
+                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                                <td class="p-3" rowspan="7"><strong>본질적 & 시스템 의존<br>(Inherent & System-Dependent)</strong></td>
+                                <td class="p-3"><strong>Accessibility</strong> (접근성)</td>
+                                <td class="p-3">데이터에 접근할 수 있는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Compliance</strong> (준수성)</td>
+                                <td class="p-3">데이터가 규정, 표준, 규칙을 준수하는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Efficiency</strong> (효율성)</td>
+                                <td class="p-3">적절한 양과 유형의 리소스로 처리 가능한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Precision</strong> (정밀성)</td>
+                                <td class="p-3">데이터가 정확하거나 식별 가능한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Traceability</strong> (추적성)</td>
+                                <td class="p-3">데이터 접근 및 변경에 대한 감사 추적이 가능한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Understandability</strong> (이해가능성)</td>
+                                <td class="p-3">사용자가 데이터를 읽고 해석할 수 있는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Confidentiality</strong> (기밀성)</td>
+                                <td class="p-3">데이터가 권한 있는 사용자에게만 접근 가능한 정도 (ISO/IEC 25012)</td>
+                            </tr>
+
+                            <!-- System-Dependent Characteristics (시스템 의존) -->
+                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                                <td class="p-3" rowspan="3"><strong>시스템 의존<br>(System-Dependent)</strong></td>
+                                <td class="p-3"><strong>Availability</strong> (가용성)</td>
+                                <td class="p-3">데이터셋을 검색할 수 있는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Portability</strong> (이식성)</td>
+                                <td class="p-3">품질을 유지하며 시스템 간 이동 가능한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Recoverability</strong> (복구가능성)</td>
+                                <td class="p-3">장애 발생 시에도 데이터를 유지하고 복구할 수 있는 정도</td>
+                            </tr>
+
+                            <!-- Additional Data Quality Characteristics (추가 특성 - AI/ML 특화) -->
+                            <tr class="border-b bg-gray-50 dark:bg-gray-800">
+                                <td class="p-3" rowspan="9"><strong>추가 특성<br>(AI/ML 특화)</strong></td>
+                                <td class="p-3"><strong>Auditability</strong> (감사가능성)</td>
+                                <td class="p-3">데이터가 감사를 받았거나 감사 가능한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Balance</strong> (균형성)</td>
+                                <td class="p-3">데이터셋 내 각 범주의 샘플 분포가 균등한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Diversity</strong> (다양성)</td>
+                                <td class="p-3">데이터셋이 다양한 범위의 특징과 값을 포함하는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Effectiveness</strong> (효과성)</td>
+                                <td class="p-3">데이터셋이 특정 ML 작업의 요구사항을 충족하는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Identifiability</strong> (식별가능성)</td>
+                                <td class="p-3">PII(개인식별정보)를 통해 개인을 식별할 수 있는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Relevance</strong> (관련성)</td>
+                                <td class="p-3">데이터셋이 주어진 맥락에 적합한 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Representativeness</strong> (대표성)</td>
+                                <td class="p-3">데이터셋이 타겟 모집단을 반영하는 정도</td>
+                            </tr>
+                            <tr class="border-b">
+                                <td class="p-3"><strong>Similarity</strong> (유사성)</td>
+                                <td class="p-3">데이터셋 내 샘플 간 유사성의 정도</td>
+                            </tr>
+                            <tr>
+                                <td class="p-3"><strong>Timeliness</strong> (적시성)</td>
+                                <td class="p-3">현상 발생과 데이터 기록 사이의 지연 시간</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <p class="text-sm italic">※ 위 24개 품질 특성은 LLM뿐만 아니라 모든 AI/ML 모델의 학습 데이터에 적용 가능한 범용적인 평가 기준입니다. 각 특성에는 정량적 측정을 위한 구체적인 Quality Measures가 정의되어 있습니다.</p>
             </section>
 
             <section id="section-2">
@@ -294,6 +457,7 @@
             <!-- Related Articles Section -->
             <section id="related-articles" class="mt-16 pt-8 border-t themeable-card rounded-lg p-6">
                 <h2 class="themeable-heading text-2xl font-bold mb-6">관련 아티클</h2>
+                <p class="text-sm mb-4 themeable-subtitle">blog.pebblous.ai에서 더 많은 데이터 품질 관련 아티클을 확인하세요.</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <a href="https://blog.pebblous.ai/project/CURK/ontology/iso5259-ontology-extraction.html" class="themeable-card border rounded-lg p-4 hover:shadow-lg transition-shadow">
                         <h3 class="themeable-heading font-bold mb-2">ISO 표준에서 온톨로지 추출하기</h3>
