--- a/project/ISO5259/5259_text_qa.html
+++ b/project/ISO5259/5259_text_qa.html
@@ -551,12 +551,29 @@
 		    publisher: "페블러스 데이터 커뮤니케이션 팀"
 		};
 
-            setupThemeSwitcher(siteConfig.themes, siteConfig.defaultTheme);
-            applyStaticConfig(siteConfig);
-            runApp();
+            // Load header first, then initialize theme and app
+            fetch('/components/header.html')
+                .then(response => response.text())
+                .then(html => {
+                    document.getElementById('header-placeholder').innerHTML = html;
+                    // After header is loaded, setup theme switcher
+                    setupThemeSwitcher(siteConfig.themes, siteConfig.defaultTheme);
+                    applyStaticConfig(siteConfig);
+                    runApp();
+                })
+                .catch(error => {
+                    console.error('Error loading header:', error);
+                    // Fallback: try to initialize anyway
+                    applyStaticConfig(siteConfig);
+                    runApp();
+                });
 
             function setupThemeSwitcher(themes, defaultTheme) {
                 const switcher = document.getElementById('theme-switcher');
+                if (!switcher) {
+                    console.error('Theme switcher element not found');
+                    return;
+                }
                 const themeIcons = {
                     dark: 'M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z',
                     light: 'M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z',
@@ -576,7 +593,10 @@
             }
 
             function applyTheme(theme, activeBtn) {
-                document.getElementById('page-logo').src = theme.logoImage;
+                const pageLogo = document.getElementById('page-logo');
+                if (pageLogo) {
+                    pageLogo.src = theme.logoImage;
+                }
                 document.body.style.backgroundColor = theme.background;
                 document.body.style.color = theme.textColor;
                 let ss = document.getElementById('dynamic-theme-styles');
@@ -740,15 +760,7 @@
                     });
                 }
 
-                // 4. Load Header Component
-                fetch('/components/header.html')
-                    .then(response => response.text())
-                    .then(html => {
-                        document.getElementById('header-placeholder').innerHTML = html;
-                    })
-                    .catch(error => console.error('Error loading header:', error));
-
-                // 5. Load Footer Component
+                // 4. Load Footer Component
                 fetch('/components/footer.html')
                     .then(response => response.text())
                     .then(html => {
