--- a/project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-01.html
+++ b/project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-01.html
@@ -31,7 +31,7 @@
     <meta id="og-url" property="og:url" content="https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-01.html">
     <meta id="og-title" property="og:title" content="Pendulum, Particles and Pebbles | LEE Joohaeng Data Art Lab">
     <meta id="og-description" property="og:description" content="이중 진자 시스템의 카오스적 움직임을 시각화한 생성 예술 작품. 커스텀 코드로 제작된 1024x1024 픽셀 코드 페인팅 시리즈. Data Art Lab (DAL) by mr_lix.">
-    <meta id="og-image" property="og:image" content="https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/image/pendulum-particle-2025-10-06T22-30-24.gif">
+    <meta id="og-image" property="og:image" content="https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/image/pendulum-particle-pebble-01.png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
     <meta property="og:image:alt" content="Pendulum, Particles and Pebbles - Double pendulum particle system visualization">
@@ -51,7 +51,7 @@
     <meta name="twitter:creator" content="@pebblous">
     <meta name="twitter:title" content="Pendulum, Particles and Pebbles | Data Art Lab">
     <meta name="twitter:description" content="이중 진자 시스템의 카오스적 움직임을 시각화한 생성 예술 작품. 커스텀 코드로 제작된 1024x1024 픽셀 코드 페인팅 시리즈. Data Art Lab (DAL) by mr_lix.">
-    <meta name="twitter:image" content="https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/image/pendulum-particle-2025-10-06T22-30-24.gif">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/image/pendulum-particle-pebble-01.png">
     <meta name="twitter:image:alt" content="Pendulum, Particles and Pebbles - Code Painting by mr_lix, Data Art Lab">
 
     <!-- Favicon -->
@@ -76,7 +76,7 @@
         "description": "이중 진자 시스템의 카오스적 움직임을 시각화한 생성 예술 작품. 커스텀 코드로 제작된 코드 페인팅.",
         "image": {
             "@type": "ImageObject",
-            "url": "https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/image/pendulum-particle-2025-10-06T22-30-24.gif",
+            "url": "https://blog.pebblous.ai/project/DAL/pendulum-particle-pebble/image/pendulum-particle-pebble-01.png",
             "width": 1024,
             "height": 1024
         },
