--- a/index.html
+++ b/index.html
@@ -70,14 +70,16 @@
         .accent-bg { background-color: #F86825; }
         .accent-border { border-color: #F86825; }
         .card {
-            background-color: rgba(15, 23, 42, 0.8);
+            background: linear-gradient(135deg, rgba(30, 41, 59, 0.8) 0%, rgba(15, 23, 42, 0.9) 100%);
             backdrop-filter: blur(10px);
             border: 1px solid #1e293b;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease, border-color 0.3s ease;
         }
         .card:hover {
             transform: translateY(-8px);
             box-shadow: 0 0 40px rgba(248, 104, 37, 0.15);
+            background: linear-gradient(135deg, rgba(30, 41, 59, 0.9) 0%, rgba(15, 23, 42, 0.95) 100%);
+            border-color: rgba(71, 85, 105, 0.6);
         }
         .fade-in {
             opacity: 0;
@@ -100,6 +102,19 @@
             white-space: nowrap;
             display: inline-block;
         }
+        .featured-badge {
+            background: linear-gradient(135deg, #F86825 0%, #FF8A50 100%);
+            color: white;
+            padding: 3px 10px;
+            border-radius: 4px;
+            font-size: 0.625rem;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            white-space: nowrap;
+            display: inline-block;
+            box-shadow: 0 2px 8px rgba(248, 104, 37, 0.3);
+        }
         .tags-container {
             overflow: hidden;
             position: relative;
@@ -115,6 +130,101 @@
         .tags-scroll.scrollable {
             cursor: pointer;
         }
+
+        /* Image container padding for spacing */
+        .card > a > div:has(img),
+        .card > div:has(img) {
+            padding: 0.375rem 0.375rem 0.375rem 0.375rem;
+        }
+
+        /* Ensure padding is visible at bottom of card */
+        .card {
+            padding-bottom: 0.375rem;
+        }
+
+        /* Blue-tinted Grayscale Thumbnail Effect - Exclude Logo */
+        .card:not(:has(img[src*="Pebblous_BM_Orange_RGB.png"])) img {
+            filter: grayscale(100%) sepia(50%) hue-rotate(180deg) saturate(150%) brightness(0.85);
+            transition: filter 0.3s ease, transform 0.5s ease, object-fit 0.5s ease;
+            border-radius: 0.375rem;
+        }
+
+        /* Stage 1: Hover - restore color immediately */
+        .card:hover:not(:has(img[src*="Pebblous_BM_Orange_RGB.png"])) img,
+        .card.touch-active:not(:has(img[src*="Pebblous_BM_Orange_RGB.png"])) img {
+            filter: grayscale(0%) sepia(0%) hue-rotate(0deg) brightness(1);
+        }
+
+        /* Stage 2: Sustained hover - scale and change object-fit after 0.4s */
+        .card.hover-sustained img {
+            object-fit: contain !important;
+            transform: scale(0.9);
+            border-radius: 0.375rem;
+        }
+
+        /* Logo Style - Gray-blue tint and smaller by default */
+        .card:has(img[src*="Pebblous_BM_Orange_RGB.png"]) img {
+            filter: grayscale(100%) sepia(50%) hue-rotate(180deg) saturate(150%) brightness(0.85);
+            transform: scale(0.75);
+            transform-origin: bottom right;
+            transition: filter 0.3s ease, transform 0.3s ease;
+        }
+
+        /* Logo hover - restore color and full size */
+        .card:hover:has(img[src*="Pebblous_BM_Orange_RGB.png"]) img,
+        .card.touch-active:has(img[src*="Pebblous_BM_Orange_RGB.png"]) img {
+            filter: grayscale(0%) sepia(0%) hue-rotate(0deg) brightness(1);
+            transform: scale(1);
+        }
+
+        /* Icon Button Styles */
+        .icon-button {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.375rem;
+            padding: 0.5rem 0.375rem;
+            border-radius: 0.375rem;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .icon-button-modal {
+            background: #334155;
+        }
+
+        .icon-button-modal:hover {
+            background: #475569;
+        }
+
+        .icon-button-page {
+            background: linear-gradient(135deg, #F86825 0%, #FF8A50 100%);
+        }
+
+        .icon-button-page:hover {
+            background: linear-gradient(135deg, #FF8A50 0%, #FFA370 100%);
+        }
+
+        .icon-button svg {
+            width: 1.25rem;
+            height: 1.25rem;
+            transition: transform 0.3s ease;
+        }
+
+        .icon-button:hover svg {
+            transform: scale(1.15);
+        }
+
+        .icon-button-text {
+            font-size: 0.625rem;
+            font-weight: 600;
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
         .modal {
             display: none;
         }
@@ -563,9 +673,9 @@
                     // Check if image is Pebblous logo (default image)
                     const isPebblousLogo = article.image && article.image.includes('Pebblous_BM');
 
-                    // Featured badge
+                    // Featured badge - inline with date
                     const featuredBadge = isFeatured
-                        ? `<span class="inline-block px-2 py-1 text-xs font-semibold bg-orange-500/20 text-orange-500 rounded mb-2">FEATURED</span>`
+                        ? `<span class="featured-badge">FEATURED</span>`
                         : '';
 
                     const imageTag = article.image
@@ -577,7 +687,8 @@
                                </div>`
                             : `<div class="relative w-full h-48 overflow-hidden bg-slate-900/30 group/img">
                                 <img src="${article.image}" alt="${article.title}"
-                                     class="w-full h-48 object-cover object-bottom transition-all duration-500 group-hover/img:object-contain group-hover/img:scale-90"
+                                     class="w-full h-48 object-cover object-bottom transition-all duration-500 group-hover/img:object-contain group-hover/img:scale-90 rounded-md"
+                                     ${article.imageAnimated ? `data-static="${article.image}" data-animated="${article.imageAnimated}"` : ''}
                                      loading="lazy">
                                </div>`
                         : '';
@@ -596,8 +707,10 @@
                         return `
                             <a href="${article.path}" target="_blank" rel="noopener noreferrer" class="card rounded-lg overflow-hidden group flex flex-col fade-in" style="animation-delay: ${index * 0.1}s;">
                                 <div class="p-6 flex-grow">
-                                    ${featuredBadge}
-                                    <div class="text-xs text-slate-500 mb-2">${article.date}</div>
+                                    <div class="flex items-center gap-2 mb-2">
+                                        <span class="text-xs text-slate-500">${article.date}</span>
+                                        ${featuredBadge}
+                                    </div>
                                     ${tagsScrollHtml}
                                     <h3 class="text-2xl font-bold text-white group-hover:accent-color transition-colors">${article.title}</h3>
                                     <p class="mt-3 text-sm text-slate-400">${article.description}</p>
@@ -609,17 +722,25 @@
                         return `
                             <div class="card rounded-lg overflow-hidden flex flex-col group fade-in" style="animation-delay: ${index * 0.1}s;">
                                 <div class="p-6 flex-grow">
-                                    ${featuredBadge}
-                                    <div class="text-xs text-slate-500 mb-2">${article.date}</div>
+                                    <div class="flex items-center gap-2 mb-2">
+                                        <span class="text-xs text-slate-500">${article.date}</span>
+                                        ${featuredBadge}
+                                    </div>
                                     ${tagsScrollHtml}
                                     <h3 class="text-2xl font-bold text-white mb-3">${article.title}</h3>
                                     <p class="text-sm text-slate-400 mb-4">${article.description}</p>
                                     <div class="grid grid-cols-2 gap-2">
-                                        <button onclick="openModal('${article.modalId}')" class="text-center bg-slate-700 hover:bg-slate-600 text-white font-semibold py-2 rounded-md transition-colors">
-                                            모달 보기
+                                        <button onclick="openModal('${article.modalId}')" class="icon-button icon-button-modal">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="color: white;">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 3.75H6A2.25 2.25 0 0 0 3.75 6v1.5M16.5 3.75H18A2.25 2.25 0 0 1 20.25 6v1.5m0 9V18A2.25 2.25 0 0 1 18 20.25h-1.5m-9 0H6A2.25 2.25 0 0 1 3.75 18v-1.5M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                            </svg>
+                                            <span class="icon-button-text">모달</span>
                                         </button>
-                                        <a href="${article.path}" class="text-center accent-bg text-white font-semibold py-2 rounded-md hover:opacity-90 transition-opacity flex items-center justify-center">
-                                            페이지 열기
+                                        <a href="${article.path}" class="icon-button icon-button-page">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="color: white;">
+                                                <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+                                            </svg>
+                                            <span class="icon-button-text">페이지</span>
                                         </a>
                                     </div>
                                 </div>
@@ -630,8 +751,10 @@
                         return `
                             <a href="${article.path}" class="card rounded-lg overflow-hidden group flex flex-col fade-in" style="animation-delay: ${index * 0.1}s;">
                                 <div class="p-6 flex-grow">
-                                    ${featuredBadge}
-                                    <div class="text-xs text-slate-500 mb-2">${article.date}</div>
+                                    <div class="flex items-center gap-2 mb-2">
+                                        <span class="text-xs text-slate-500">${article.date}</span>
+                                        ${featuredBadge}
+                                    </div>
                                     ${tagsScrollHtml}
                                     <h3 class="text-2xl font-bold text-white group-hover:accent-color transition-colors">${article.title}</h3>
                                     <p class="mt-3 text-sm text-slate-400">${article.description}</p>
@@ -784,6 +907,84 @@
         }
 
         // ============================================================
+        // Image Hover Swap Functionality (3-Stage with Mobile Support)
+        // ============================================================
+
+        function initImageHover() {
+            const cards = document.querySelectorAll('.card');
+
+            cards.forEach(card => {
+                let hoverTimeout = null;
+                const img = card.querySelector('img[data-static][data-animated]');
+
+                if (!img) return;
+
+                const staticSrc = img.dataset.static;
+                const animatedSrc = img.dataset.animated;
+
+                // Mouse events (desktop)
+                card.addEventListener('mouseenter', () => {
+                    // Stage 1: Color restoration happens via CSS immediately
+
+                    // Stage 2: After 400ms, add sustained hover class and swap to GIF
+                    hoverTimeout = setTimeout(() => {
+                        card.classList.add('hover-sustained');
+                        if (animatedSrc) {
+                            img.src = animatedSrc;
+                        }
+                    }, 400);
+                });
+
+                card.addEventListener('mouseleave', () => {
+                    // Clear timeout if user leaves before sustained hover
+                    if (hoverTimeout) {
+                        clearTimeout(hoverTimeout);
+                        hoverTimeout = null;
+                    }
+
+                    // Remove sustained hover class
+                    card.classList.remove('hover-sustained');
+
+                    // Restore static image
+                    if (animatedSrc && img.src.includes(animatedSrc)) {
+                        img.src = staticSrc;
+                    }
+                });
+
+                // Touch events (mobile)
+                card.addEventListener('touchstart', (e) => {
+                    // Stage 1: Trigger color restoration via adding hover class temporarily
+                    card.classList.add('touch-active');
+
+                    // Stage 2: After 400ms, add sustained hover class and swap to GIF
+                    hoverTimeout = setTimeout(() => {
+                        card.classList.add('hover-sustained');
+                        if (animatedSrc) {
+                            img.src = animatedSrc;
+                        }
+                    }, 400);
+                }, { passive: true });
+
+                card.addEventListener('touchend', () => {
+                    // Clear timeout if user stops touching before sustained hover
+                    if (hoverTimeout) {
+                        clearTimeout(hoverTimeout);
+                        hoverTimeout = null;
+                    }
+
+                    // Remove classes
+                    card.classList.remove('touch-active');
+                    card.classList.remove('hover-sustained');
+
+                    // Restore static image
+                    if (animatedSrc && img.src.includes(animatedSrc)) {
+                        img.src = staticSrc;
+                    }
+                }, { passive: true });
+            });
+        }
+
+        // ============================================================
         // Search Functionality
         // ============================================================
 
@@ -812,9 +1013,10 @@
                 renderArticles('tech-articles', techArticles);
                 renderArticles('story-articles', storyArticles);
 
-                // Initialize tags scroll after rendering
+                // Initialize tags scroll and image hover after rendering
                 setTimeout(() => {
                     initTagsScroll();
+                    initImageHover();
                 }, 100);
 
                 // Setup search
