--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
         .accent-bg { background-color: #F86825; }
         .accent-border { border-color: #F86825; }
         .card {
-            background: linear-gradient(135deg, rgba(30, 41, 59, 0.8) 0%, rgba(15, 23, 42, 0.9) 100%);
-            backdrop-filter: blur(10px);
+            background: linear-gradient(135deg, rgb(30, 41, 59) 0%, rgb(15, 23, 42) 100%);
             border: 1px solid #1e293b;
+            padding-bottom: 0.375rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease, border-color 0.3s ease;
         }
         .card:hover {
             transform: translateY(-8px);
             box-shadow: 0 0 40px rgba(248, 104, 37, 0.15);
-            background: linear-gradient(135deg, rgba(30, 41, 59, 0.9) 0%, rgba(15, 23, 42, 0.95) 100%);
+            background: linear-gradient(135deg, rgb(30, 41, 59) 0%, rgb(15, 23, 42) 100%);
             border-color: rgba(71, 85, 105, 0.6);
         }
         .fade-in {
@@ -135,11 +135,6 @@
         .card > a > div:has(img),
         .card > div:has(img) {
             padding: 0.375rem 0.375rem 0.375rem 0.375rem;
-        }
-
-        /* Ensure padding is visible at bottom of card */
-        .card {
-            padding-bottom: 0.375rem;
         }
 
         /* Blue-tinted Grayscale Thumbnail Effect - Exclude Logo */
@@ -236,6 +231,36 @@
         .modal.is-open {
             display: flex;
         }
+
+        /* Particle Canvas Background */
+        #particle-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            opacity: 0.6;
+            pointer-events: none;
+        }
+
+        /* Hero Animation */
+        .hero-fade-in {
+            opacity: 0;
+            transform: translateY(30px);
+        }
+
+        .hero-fade-in.animate {
+            animation: heroFadeInUp 1.2s ease-out forwards;
+        }
+
+        @keyframes heroFadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         /* Footer Styles - Dark Theme */
         .pebblous-footer {
             background-color: #0f172a;
@@ -303,6 +328,9 @@
 </head>
 <body class="antialiased">
 
+    <!-- Particle Canvas Background -->
+    <canvas id="particle-canvas"></canvas>
+
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-50 bg-slate-950/80 backdrop-blur-sm border-b border-slate-800">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
@@ -362,15 +390,23 @@
         <!-- Hero Section -->
         <section class="text-center py-20 lg:py-32 px-6 relative overflow-hidden">
             <div class="absolute inset-0 bg-grid-slate-800/40 [mask-image:linear-gradient(to_bottom,white_5%,transparent_80%)]"></div>
-            <div class="relative z-10">
-                <h1 class="text-4xl md:text-6xl font-extrabold text-white leading-tight">
+            <div class="relative z-10 max-w-4xl mx-auto">
+                <h1 class="hero-fade-in text-4xl md:text-6xl font-extrabold text-white mb-8" style="line-height: 1.6; animation-delay: 0.2s;">
                     사람과 데이터 사이의 간극,<br>
-                    <span class="accent-color">예술과 기술</span>로 줄입니다.
+                    <span class="accent-color">기술과 예술</span>로 줄입니다.
                 </h1>
-                <p class="mt-6 max-w-2xl mx-auto text-lg text-slate-400">
-                    페블러스는 눈에 보이지 않는 데이터의 우주를 탐험하고, 그 본질을 만질 수 있는 형태로 바꾸어 새로운 문화와 가치를 창조합니다.
-                </p>
-                <a href="#posts" class="mt-10 inline-block accent-bg text-white font-bold px-8 py-3 rounded-md hover:opacity-90 transition-opacity">
+                <div class="hero-fade-in mt-12 max-w-3xl mx-auto" style="animation-delay: 0.5s;">
+                    <div class="relative px-8 py-6 rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/60 to-slate-900/60 backdrop-blur-sm">
+                        <p class="text-xl md:text-2xl font-bold text-white tracking-tight mb-3" style="letter-spacing: 0.02em;">
+                            Pebblous Makes Data Tangible
+                        </p>
+                        <p class="text-base md:text-lg text-slate-300 font-light" style="line-height: 1.75; letter-spacing: 0.01em;">
+                            흩어지는 모래알을 손에 잡히는 조약돌로
+                        </p>
+                        <div class="absolute top-0 left-0 w-1 h-full accent-bg rounded-l-lg"></div>
+                    </div>
+                </div>
+                <a href="#posts" class="hero-fade-in mt-12 inline-block accent-bg text-white font-bold px-8 py-3 rounded-md hover:opacity-90 transition-opacity" style="animation-delay: 0.8s;">
                     최신 글 보기
                 </a>
             </div>
@@ -943,7 +979,6 @@
                     const staticSrc = img.dataset.static;
                     const animatedSrc = img.dataset.animated;
 
-                    let isAnimated = false;
                     let animatedLoaded = false;
 
                     // Preload animated image
@@ -951,146 +986,58 @@
                     preloadImg.onload = () => { animatedLoaded = true; };
                     preloadImg.src = animatedSrc;
 
+                    // Desktop mouse events
                     card.addEventListener('mouseenter', function onMouseEnter() {
                         if (!animatedLoaded) return;
 
+                        // Stage 1: Color restoration happens via CSS immediately
+                        // Stage 2: After 400ms, add sustained hover class and swap to GIF
                         hoverTimeout = setTimeout(() => {
+                            card.classList.add('hover-sustained');
                             img.src = animatedSrc;
-                            isAnimated = true;
-                        }, 300);
+                        }, 400);
                     });
 
                     card.addEventListener('mouseleave', function onMouseLeave() {
                         clearTimeout(hoverTimeout);
+                        card.classList.remove('hover-sustained');
 
-                        if (isAnimated) {
+                        if (img.src.includes(animatedSrc)) {
                             img.src = staticSrc;
-                            isAnimated = false;
                         }
                     });
+
+                    // Mobile touch events
+                    card.addEventListener('touchstart', function onTouchStart(e) {
+                        if (!animatedLoaded) return;
+
+                        // Stage 1: Trigger color restoration via CSS
+                        card.classList.add('touch-active');
+
+                        // Stage 2: After 400ms, add sustained hover class and swap to GIF
+                        hoverTimeout = setTimeout(() => {
+                            card.classList.add('hover-sustained');
+                            img.src = animatedSrc;
+                        }, 400);
+                    }, { passive: true });
+
+                    card.addEventListener('touchend', function onTouchEnd() {
+                        clearTimeout(hoverTimeout);
+                        card.classList.remove('touch-active');
+                        card.classList.remove('hover-sustained');
+
+                        if (img.src.includes(animatedSrc)) {
+                            img.src = staticSrc;
+                        }
+                    }, { passive: true });
                 }
             });
         }
 
         // ============================================================
-        // Tags Scroll Functionality (Legacy - kept for backward compatibility)
+        // Note: initTagsScroll() and initImageHover() legacy functions removed.
+        // All hover interactions now handled by initCardInteractions() above.
         // ============================================================
-
-        function initTagsScroll() {
-            const cards = document.querySelectorAll('.card');
-
-            cards.forEach(card => {
-                const container = card.querySelector('.tags-container');
-                const scroll = card.querySelector('.tags-scroll');
-
-                if (!container || !scroll) return;
-
-                // Calculate if scrolling is needed
-                const containerWidth = container.offsetWidth;
-                const scrollWidth = scroll.scrollWidth;
-                const needsScroll = scrollWidth > containerWidth;
-
-                if (!needsScroll) return;
-
-                // Mark as scrollable
-                scroll.classList.add('scrollable');
-
-                // Calculate scroll distance
-                const scrollDistance = scrollWidth - containerWidth;
-
-                // Hover event
-                card.addEventListener('mouseenter', () => {
-                    scroll.style.transform = `translateX(-${scrollDistance}px)`;
-                    // Calculate duration based on distance (roughly 100px per second)
-                    const duration = Math.max(1, scrollDistance / 100);
-                    scroll.style.transition = `transform ${duration}s ease-out`;
-                });
-
-                // Mouse leave event
-                card.addEventListener('mouseleave', () => {
-                    scroll.style.transform = 'translateX(0)';
-                    scroll.style.transition = 'transform 0.5s ease-out';
-                });
-            });
-        }
-
-        // ============================================================
-        // Image Hover Swap Functionality (3-Stage with Mobile Support)
-        // ============================================================
-
-        function initImageHover() {
-            const cards = document.querySelectorAll('.card');
-
-            cards.forEach(card => {
-                let hoverTimeout = null;
-                const img = card.querySelector('img[data-static][data-animated]');
-
-                if (!img) return;
-
-                const staticSrc = img.dataset.static;
-                const animatedSrc = img.dataset.animated;
-
-                // Mouse events (desktop)
-                card.addEventListener('mouseenter', () => {
-                    // Stage 1: Color restoration happens via CSS immediately
-
-                    // Stage 2: After 400ms, add sustained hover class and swap to GIF
-                    hoverTimeout = setTimeout(() => {
-                        card.classList.add('hover-sustained');
-                        if (animatedSrc) {
-                            img.src = animatedSrc;
-                        }
-                    }, 400);
-                });
-
-                card.addEventListener('mouseleave', () => {
-                    // Clear timeout if user leaves before sustained hover
-                    if (hoverTimeout) {
-                        clearTimeout(hoverTimeout);
-                        hoverTimeout = null;
-                    }
-
-                    // Remove sustained hover class
-                    card.classList.remove('hover-sustained');
-
-                    // Restore static image
-                    if (animatedSrc && img.src.includes(animatedSrc)) {
-                        img.src = staticSrc;
-                    }
-                });
-
-                // Touch events (mobile)
-                card.addEventListener('touchstart', (e) => {
-                    // Stage 1: Trigger color restoration via adding hover class temporarily
-                    card.classList.add('touch-active');
-
-                    // Stage 2: After 400ms, add sustained hover class and swap to GIF
-                    hoverTimeout = setTimeout(() => {
-                        card.classList.add('hover-sustained');
-                        if (animatedSrc) {
-                            img.src = animatedSrc;
-                        }
-                    }, 400);
-                }, { passive: true });
-
-                card.addEventListener('touchend', () => {
-                    // Clear timeout if user stops touching before sustained hover
-                    if (hoverTimeout) {
-                        clearTimeout(hoverTimeout);
-                        hoverTimeout = null;
-                    }
-
-                    // Remove classes
-                    card.classList.remove('touch-active');
-                    card.classList.remove('hover-sustained');
-
-                    // Restore static image
-                    if (animatedSrc && img.src.includes(animatedSrc)) {
-                        img.src = staticSrc;
-                    }
-                }, { passive: true });
-            });
-        }
 
         // ============================================================
         // Search Functionality
@@ -1120,12 +1067,6 @@
                 renderArticles('art-articles', artArticles);
                 renderArticles('tech-articles', techArticles);
                 renderArticles('story-articles', storyArticles);
-
-                // Initialize tags scroll and image hover after rendering
-                setTimeout(() => {
-                    initTagsScroll();
-                    initImageHover();
-                }, 100);
 
                 // Setup search
                 setupSearch();
@@ -1250,6 +1191,109 @@
 
         // Load articles when DOM is ready
         document.addEventListener('DOMContentLoaded', loadArticles);
+
+        // ============================================================
+        // Particle Canvas Animation
+        // ============================================================
+
+        (function() {
+            const canvas = document.getElementById('particle-canvas');
+            const ctx = canvas.getContext('2d');
+
+            let particles = [];
+            const particleCount = 150;
+            const maxDistance = 150;
+
+            function setCanvasSize() {
+                canvas.width = window.innerWidth;
+                canvas.height = window.innerHeight;
+            }
+
+            class Particle {
+                constructor() {
+                    this.x = Math.random() * canvas.width;
+                    this.y = Math.random() * canvas.height;
+                    this.radius = Math.random() * 2 + 1;
+                    this.vx = (Math.random() - 0.5) * 0.3;
+                    this.vy = (Math.random() - 0.5) * 0.3;
+                }
+
+                draw() {
+                    ctx.beginPath();
+                    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+                    ctx.fillStyle = 'rgba(248, 104, 37, 1)';
+                    ctx.fill();
+                }
+
+                update() {
+                    this.x += this.vx;
+                    this.y += this.vy;
+
+                    if (this.x < 0) this.x = canvas.width;
+                    if (this.x > canvas.width) this.x = 0;
+                    if (this.y < 0) this.y = canvas.height;
+                    if (this.y > canvas.height) this.y = 0;
+                }
+            }
+
+            function initParticles() {
+                particles = [];
+                for (let i = 0; i < particleCount; i++) {
+                    particles.push(new Particle());
+                }
+            }
+
+            function connectParticles() {
+                for (let i = 0; i < particles.length; i++) {
+                    for (let j = i + 1; j < particles.length; j++) {
+                        const dx = particles[i].x - particles[j].x;
+                        const dy = particles[i].y - particles[j].y;
+                        const distance = Math.sqrt(dx * dx + dy * dy);
+
+                        if (distance < maxDistance) {
+                            ctx.beginPath();
+                            ctx.moveTo(particles[i].x, particles[i].y);
+                            ctx.lineTo(particles[j].x, particles[j].y);
+                            ctx.strokeStyle = `rgba(248, 104, 37, ${(1 - distance / maxDistance) * 0.8})`;
+                            ctx.lineWidth = 1.5;
+                            ctx.stroke();
+                        }
+                    }
+                }
+            }
+
+            function animate() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+                particles.forEach(p => {
+                    p.update();
+                    p.draw();
+                });
+
+                connectParticles();
+                requestAnimationFrame(animate);
+            }
+
+            window.addEventListener('resize', () => {
+                setCanvasSize();
+                initParticles();
+            });
+
+            setCanvasSize();
+            initParticles();
+            animate();
+        })();
+
+        // ============================================================
+        // Hero Animation Trigger
+        // ============================================================
+
+        window.addEventListener('DOMContentLoaded', () => {
+            const heroElements = document.querySelectorAll('.hero-fade-in');
+            setTimeout(() => {
+                heroElements.forEach(el => el.classList.add('animate'));
+            }, 100);
+        });
     </script>
 </body>
 </html>
